syntax = "proto3";

option go_package = "proto/accommodation";

service AccommodationService {
  rpc GreetFromAccommodation(Request) returns (Response) {}
  rpc CreateAccommodation(CreateAccommodationRequest) returns (CreateAccommodationResponse) {}
}

message Request {
  string name = 1;
}

message Response {
  string greeting = 2;
}

message CreateAccommodationRequest {
  Accommodation reg = 1;
} 

message CreateAccommodationResponse {
  Accommodation reg = 1;
}

message Accommodation {
  string id = 1;
  string name = 2;
  string location = 3;
  string benefits = 4;
  repeated string photos = 5;
  int32 minGuests = 6;
  int32 maxGuests = 7;
}